--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gh-environment-remover",
-  "version": "0.1.0",
+  "name": "gh-deployment-remover",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.0.0",
@@ -21,7 +21,10 @@
     "parse-github-url": "^1.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paginated-list": "^1.1.5",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.10.4",
+    "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.0.8",
     "typescript": "^4.0.3",
